work for week 0

--- a/1_PM/index.html
+++ b/1_PM/index.html
@@ -4,11 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Homepage!</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    
+    <title>Cats!</title>
 </head>
 
-<body>
-    Build your website here!
+<body id="black">
+    <nav class="navbar navbar-expand-md navbar-light bg-light border">
+        <div class="collapse navbar-collapse" id="navbar">
+            <a class="navbar-brand" href="index.html">
+                <img src="catslog.png" width="100"  class="d-inline-block align-top" alt="catslogo">
+            </a>
+            <ul class="navbar-nav mr-auto mt-2">
+                    <li class="nav-item"><a class="nav-link" href="reviews.html">An Overview</a></li>
+                    <li class="nav-item"><a class="nav-link" href="illuminati.html">Who Did It?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cockroach.html">Analysis of a Scene</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="header">
+        <div class="box">
+            <h1><img src="catslog.png" width="300"> :The Movie</h1>
+        </div> 
+      </div>
+      <div class="content" id="center1">
+        <iframe id="embed-vid" src="https://www.youtube.com/embed/t7Uei5Qk9RM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 </body>
 
 </html>
